--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       >
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-            School Name
+            XYZ School
           </h5>
           <button
             type="button"
